Add additional categorical features and experiment with dropout

--- a/python/notebooks/keras_nn.ipynb
+++ b/python/notebooks/keras_nn.ipynb
@@ -35,7 +35,29 @@
     "    \n",
     "    \n",
     "transformed_data = np.c_[transformed_data,transformed_data[:,[9,11,13]].sum(axis=1)]\n",
-    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]"
+    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "strlength_cat = np.ceil(transformed_data[:,15] / 0.1)\n",
+    "strlength_cat[strlength_cat >= 2] = 2.0\n",
+    "strlength_cat = scaler.fit_transform(strlength_cat.reshape(-1, 1))\n",
+    "transformed_data = np.c_[transformed_data, strlength_cat]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta_cat = transformed_data[:,7]\n",
+    "delta_cat = np.ceil(delta_cat/0.0001)\n",
+    "delta_cat[delta_cat > 1] = 2\n",
+    "delta_cat = scaler.fit_transform(delta_cat.reshape(-1, 1))\n",
+    "\n",
+    "transformed_data = np.c_[transformed_data, delta_cat]"
    ]
   },
   {
@@ -51,7 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transformed_data = np.c_[np.ones((transformed_data.shape[0], 1)), transformed_data]"
+    "transformed_data = np.c_[np.ones((transformed_data.shape[0], 1)), transformed_data]\n",
+    "transformed_data.shape"
    ]
   },
   {
@@ -70,7 +93,7 @@
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=1337)\n",
-    "for train_index, test_index in split.split(transformed_data, targets):\n",
+    "for train_index, test_index in split.split(transformed_data, strlength_cat):\n",
     "    train_index = train_index\n",
     "    test_index=test_index\n"
    ]
@@ -91,11 +114,14 @@
     "test_X = transformed_data[test_index]\n",
     "test_y = targets[test_index]\n",
     "\n",
-    "# Try to solve label shape error\n",
-    "\n",
     "from sklearn.utils import column_or_1d \n",
     "train_y = column_or_1d(train_y)\n",
-    "test_y = column_or_1d(test_y)"
+    "test_y = column_or_1d(test_y)\n",
+    "\n",
+    "# What about string length categories\n",
+    "\n",
+    "print(pd.Series(train_X[:,17]).value_counts() / train_X.shape[0])\n",
+    "print(pd.Series(test_X[:,17]).value_counts() / test_X.shape[0])"
    ]
   },
   {
@@ -153,7 +179,7 @@
     "    verbose=0, mode='auto')\n",
     "\n",
     "network.fit(\n",
-    "    train_X, train_y, epochs=150, \n",
+    "    train_X, train_y, epochs=100, \n",
     "    batch_size=128, callbacks=[tb,es])"
    ]
   },
@@ -174,7 +200,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_pred = network.predict_classes(test_X)\n"
+    "test_pred = network.predict_classes(test_X)\n",
+    "#69"
    ]
   },
   {
