--- a/python/notebooks/machine_learning_exploration.ipynb
+++ b/python/notebooks/machine_learning_exploration.ipynb
@@ -98,10 +98,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split the string length feature into categories for better splitting of the training and test set\n",
+    "\n",
+    "plt.hist(transformed_data[:,15])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "strlength_cat = np.ceil(transformed_data[:,15] / 0.1)\n",
+    "strlength_cat[strlength_cat >= 2] = 2.0\n",
+    "strlength_cat = scaler.fit_transform(strlength_cat.reshape(-1, 1))\n",
+    "transformed_data = np.c_[transformed_data, strlength_cat]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta_cat = transformed_data[:,7]\n",
+    "plt.subplot(121)\n",
+    "plt.hist(delta_cat)\n",
+    "\n",
+    "delta_cat = np.ceil(delta_cat/0.0001)\n",
+    "delta_cat[delta_cat > 1] = 2\n",
+    "delta_cat = scaler.fit_transform(delta_cat.reshape(-1, 1))\n",
+    "\n",
+    "plt.subplot(122)\n",
+    "plt.hist(delta_cat)\n",
+    "plt.show()\n",
+    "\n",
+    "transformed_data = np.c_[transformed_data, delta_cat]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
     "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=1337)\n",
-    "for train_index, test_index in split.split(transformed_data, targets):\n",
+    "for train_index, test_index in split.split(transformed_data, strlength_cat):\n",
     "    train_index = train_index\n",
-    "    test_index=test_index\n"
+    "    test_index=test_index\n",
+    "\n"
    ]
   },
   {
@@ -124,7 +176,12 @@
     "\n",
     "from sklearn.utils import column_or_1d\n",
     "train_y = column_or_1d(train_y)\n",
-    "test_y = column_or_1d(test_y)"
+    "test_y = column_or_1d(test_y)\n",
+    "\n",
+    "# What about string length categories\n",
+    "\n",
+    "print(pd.Series(train_X[:,16]).value_counts() / train_X.shape[0])\n",
+    "print(pd.Series(test_X[:,16]).value_counts() / test_X.shape[0])"
    ]
   },
   {
@@ -500,10 +557,11 @@
     "# Double check this with CV\n",
     "\n",
     "scores = cross_val_score(blended_model, test_X, test_y,\n",
-    "                        scoring='accuracy',cv=50)\n",
-    "print(scores)\n",
+    "                        scoring='accuracy',cv=10)\n",
+    "\n",
     "print(round(scores.mean(),3))\n",
-    "print(round(scores.std(),3))\n"
+    "print(round(scores.std(),3))\n",
+    "#72"
    ]
   }
  ],
