--- a/python/notebooks/neural_network.ipynb
+++ b/python/notebooks/neural_network.ipynb
@@ -35,7 +35,28 @@
     "    \n",
     "    \n",
     "transformed_data = np.c_[transformed_data,transformed_data[:,[9,11,13]].sum(axis=1)]\n",
-    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]"
+    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "strlength_cat = np.ceil(transformed_data[:,15] / 0.1)\n",
+    "strlength_cat[strlength_cat >= 2] = 2.0\n",
+    "strlength_cat = scaler.fit_transform(strlength_cat.reshape(-1, 1))\n",
+    "transformed_data = np.c_[transformed_data, strlength_cat]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta_cat = transformed_data[:,7]\n",
+    "delta_cat = np.ceil(delta_cat/0.0001)\n",
+    "delta_cat[delta_cat > 1] = 2\n",
+    "delta_cat = scaler.fit_transform(delta_cat.reshape(-1, 1))\n",
+    "transformed_data = np.c_[transformed_data, delta_cat]\n"
    ]
   },
   {
@@ -70,7 +91,7 @@
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=1337)\n",
-    "for train_index, test_index in split.split(transformed_data, targets):\n",
+    "for train_index, test_index in split.split(transformed_data, strlength_cat):\n",
     "    train_index = train_index\n",
     "    test_index=test_index\n"
    ]
@@ -95,7 +116,12 @@
     "\n",
     "from sklearn.utils import column_or_1d \n",
     "train_y = column_or_1d(train_y)\n",
-    "test_y = column_or_1d(test_y)"
+    "test_y = column_or_1d(test_y)\n",
+    "\n",
+    "# What about string length categories\n",
+    "\n",
+    "print(pd.Series(train_X[:,17]).value_counts() / train_X.shape[0])\n",
+    "print(pd.Series(test_X[:,17]).value_counts() / test_X.shape[0])"
    ]
   },
   {
@@ -120,10 +146,10 @@
     "\n",
     "now = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
-    "n_hidden = 200\n",
+    "n_hidden = 150\n",
     "n_outputs = 2\n",
     "learning_rate = 0.01\n",
-    "dropout_rate = 0.5  # == 1 - keep_prob\n",
+    "dropout_rate = 0.9  # == 1 - keep_prob\n",
     "\n"
    ]
   },
@@ -169,7 +195,6 @@
     "\n",
     "training = tf.placeholder_with_default(False, shape=(), name='training')\n",
     "\n",
-    "dropout_rate = 0.5  # == 1 - keep_prob\n",
     "X_drop = tf.layers.dropout(X, dropout_rate, training=training)\n",
     "\n",
     "with tf.name_scope(\"dnn\"):\n",
@@ -267,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_epochs = 50\n",
+    "n_epochs = 100\n",
     "n_batches = 50\n",
     "batch_size = 100\n",
     "\n",
@@ -326,7 +351,9 @@
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "print(classification_report(test_y, y_pred))"
+    "print(classification_report(test_y, y_pred))\n",
+    "#68\n",
+    "# High dropout rate improve model slightly."
    ]
   },
   {
