--- a/python/notebooks/keras_nn.ipynb
+++ b/python/notebooks/keras_nn.ipynb
@@ -167,20 +167,36 @@
     "train_y = to_categorical(train_y)\n",
     "test_y = to_categorical(test_y)\n",
     "\n",
+    "# Write logs to tensorboard (note you need to start a server with\n",
+    "# tensorboard --logdir ./tf_logs/)\n",
     "\n",
     "tb = TensorBoard(\n",
-    "    log_dir='./logs', histogram_freq=0, batch_size=32, \n",
-    "    write_graph=True, write_grads=False, write_images=True, \n",
+    "    log_dir='./tf_logs', histogram_freq=0, batch_size=32, \n",
+    "    write_graph=True, write_grads=False, write_images=False, \n",
     "    embeddings_freq=0, embeddings_layer_names=None, \n",
     "    embeddings_metadata=None)\n",
     "\n",
+    "# Employ early stopping as a means of regularisations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "es = EarlyStopping(\n",
-    "    monitor='val_loss', min_delta=0, patience=0, \n",
-    "    verbose=0, mode='auto')\n",
+    "    monitor='val_loss', \n",
+    "    min_delta=0.001, \n",
+    "    patience=10, verbose=1, \n",
+    "    mode='auto')\n",
+    "\n",
+    "# 200 epochs seems to minimise the test set error.\n",
     "\n",
     "network.fit(\n",
-    "    train_X, train_y, epochs=100, \n",
-    "    batch_size=128, callbacks=[tb,es])"
+    "    train_X, train_y, epochs=200, \n",
+    "    batch_size=128, callbacks=[tb],\n",
+    "    validation_data=(test_X, test_y))"
    ]
   },
   {
