--- a/python/notebooks/keras_wordembedding.ipynb
+++ b/python/notebooks/keras_wordembedding.ipynb
@@ -23,9 +23,9 @@
     "from keras.layers import Conv1D, MaxPooling1D, Embedding\n",
     "from keras.models import Model\n",
     "\n",
-    "BASE_DIR = '/home/matthew/Documents/classifypipe/src/python/notebook'\n",
-    "GLOVE_DIR = BASE_DIR + './glove.6B/'\n",
-    "TEXT_DATA_DIR = BASE_DIR + './20_newsgroup/'\n",
+    "BASE_DIR = '/home/matthew/Documents/classifypipe/src/python/notebooks/'\n",
+    "GLOVE_DIR = BASE_DIR + 'glove.6B/'\n",
+    "TEXT_DATA_DIR = BASE_DIR + '20_newsgroup/'\n",
     "MAX_SEQUENCE_LENGTH = 1000\n",
     "MAX_NB_WORDS = 20000\n",
     "EMBEDDING_DIM = 100\n",
@@ -41,18 +41,25 @@
     "texts = []  # list of text samples\n",
     "labels_index = {}  # dictionary mapping label name to numeric id\n",
     "labels = []  # list of label ids\n",
+    "\n",
+    "# Cycle through the sorted dirs\n",
+    "\n",
     "for name in sorted(os.listdir(TEXT_DATA_DIR)):\n",
     "    path = os.path.join(TEXT_DATA_DIR, name)\n",
     "    if os.path.isdir(path):\n",
     "        label_id = len(labels_index)\n",
     "        labels_index[name] = label_id\n",
+    "        \n",
+    "        # Cycle through file names\n",
+    "        \n",
     "        for fname in sorted(os.listdir(path)):\n",
+    "            \n",
+    "            # If the filename is a digit (as expected)\n",
+    "            # create path and read\n",
+    "            \n",
     "            if fname.isdigit():\n",
     "                fpath = os.path.join(path, fname)\n",
-    "                if sys.version_info < (3,):\n",
-    "                    f = open(fpath)\n",
-    "                else:\n",
-    "                    f = open(fpath, encoding='latin-1')\n",
+    "                f = open(fpath, encoding='latin-1')\n",
     "                t = f.read()\n",
     "                i = t.find('\\n\\n')  # skip header\n",
     "                if 0 < i:\n",
@@ -70,18 +77,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = Tokenizer(num_words=MAX_NB_WORDS)\n",
-    "tokenizer.fit_on_texts(texts)\n",
-    "sequences = tokenizer.texts_to_sequences(texts)\n",
+    "# Set the total number of words to be used in word embedding\n",
     "\n",
+    "tokenizer = Tokenizer(num_words=MAX_NB_WORDS)\n",
+    "\n",
+    "# Updates internal vocabulary based on a list of texts.\n",
+    "# Required before using `texts_to_sequences` or `texts_to_matrix`.\n",
+    "\n",
+    "tokenizer.fit_on_texts(texts)\n",
+    "\n",
+    "# Transforms each text into a sequence of integers\n",
+    "# Will only use words which the tokenizer knows (set by tokenizer.fit_on_texts()).\n",
+    "# Will only use th etop 'num_words' set by the tokenizer\n",
+    "\n",
+    "sequences = tokenizer.texts_to_sequences(texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "word_index = tokenizer.word_index\n",
-    "print('Found %s unique tokens.' % len(word_index))\n",
+    "print('Found %s unique tokens.' % len(word_index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pads each sentence to the same lengyh as the longest sentence\n",
+    "# Zeros are inserted where words are absent. Note that padding \n",
+    "# starts on the left.\n",
     "\n",
     "data = pad_sequences(sequences, maxlen=MAX_SEQUENCE_LENGTH)\n",
     "\n",
+    "# Note that this will truncate at MAX_SEQUENCE_LENGTH leading to\n",
+    "# an array of size:\n",
+    "\n",
+    "print(data.shape)\n",
+    "print('Data now contains ', round((data == 0).sum() / (data.shape[0] * data.shape[1]) * 100), '% zeros.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "labels = to_categorical(np.asarray(labels))\n",
     "print('Shape of data tensor:', data.shape)\n",
-    "print('Shape of label tensor:', labels.shape)\n",
+    "print('Shape of label tensor:', labels.shape, '(classes)')\n",
     "\n",
     "# split the data into a training set and a validation set\n",
     "indices = np.arange(data.shape[0])\n",
@@ -102,6 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in the embedding here using 400000 words with 100 dimensions\n",
+    "# This is a pre-trained embedding (see link in top chunk)\n",
+    "\n",
     "embeddings_index = {}\n",
     "f = open(os.path.join(GLOVE_DIR, 'glove.6B.100d.txt'))\n",
     "for line in f:\n",
@@ -111,7 +163,9 @@
     "    embeddings_index[word] = coefs\n",
     "f.close()\n",
     "\n",
-    "print('Found %s word vectors.' % len(embeddings_index))"
+    "print('Found %s word vectors.' % len(embeddings_index))\n",
+    "\n",
+    "# Output is a dict with two keys: word and coefs:"
    ]
   },
   {
@@ -120,6 +174,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create embedding matrix, by setting words not found in \n",
+    "# embedding matrix to zero. Set the size of the embdedding\n",
+    "# using the EMBEDDING_DIM var.\n",
+    "\n",
     "embedding_matrix = np.zeros((len(word_index) + 1, EMBEDDING_DIM))\n",
     "for word, i in word_index.items():\n",
     "    embedding_vector = embeddings_index.get(word)\n",
@@ -135,11 +193,41 @@
    "outputs": [],
    "source": [
     "from keras.layers import Embedding\n",
+    "from keras.callbacks import TensorBoard\n",
+    "from keras.callbacks import EarlyStopping\n",
+    "\n",
+    "tb = TensorBoard(\n",
+    "    log_dir='./tf_logs', histogram_freq=0, batch_size=32, \n",
+    "    write_graph=True, write_grads=False, write_images=False, \n",
+    "    embeddings_freq=0, embeddings_layer_names=None, \n",
+    "    embeddings_metadata=None)\n",
+    "\n",
+    "es = EarlyStopping(\n",
+    "    monitor='val_loss', min_delta=0, patience=0, \n",
+    "    verbose=0, mode='auto')\n",
+    "\n",
+    "# Create keras embedding layer from pre-trained embedding\n",
     "\n",
     "embedding_layer = Embedding(len(word_index) + 1,\n",
     "                            EMBEDDING_DIM,\n",
-    "             sequence_input = Input(shape=(MAX_SEQUENCE_LENGTH,), dtype='int32')\n",
+    "                            weights=[embedding_matrix],\n",
+    "                            input_length=MAX_SEQUENCE_LENGTH,\n",
+    "                            trainable=False)\n",
+    "\n",
+    "# Set input size for embedding layer\n",
+    "\n",
+    "sequence_input = Input(shape=(MAX_SEQUENCE_LENGTH,), dtype='int32')\n",
+    "                            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "embedded_sequences = embedding_layer(sequence_input)\n",
+    "\n",
     "x = Conv1D(128, 5, activation='relu')(embedded_sequences)\n",
     "x = MaxPooling1D(5)(x)\n",
     "x = Conv1D(128, 5, activation='relu')(x)\n",
@@ -152,14 +240,12 @@
     "\n",
     "model = Model(sequence_input, preds)\n",
     "model.compile(loss='categorical_crossentropy',\n",
-    "              optimizer='rmsprop',\n",
+    "              optimizer='adam',\n",
     "              metrics=['acc'])\n",
     "\n",
     "# happy learning!\n",
     "model.fit(x_train, y_train, validation_data=(x_val, y_val),\n",
-    "          epochs=2, batch_size=128)               weights=[embedding_matrix],\n",
-    "                            input_length=MAX_SEQUENCE_LENGTH,\n",
-    "                            trainable=False)"
+    "          epochs=3, batch_size=128, callbacks=[tb, es])"
    ]
   },
   {
@@ -168,9 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_layer = Embedding(len(word_index) + 1,\n",
-    "                            EMBEDDING_DIM,\n",
-    "                            input_length=MAX_SEQUENCE_LENGTH)"
+    "model.save('convnet.h5')\n"
    ]
   }
  ],
