Add machinelearning notebooks

--- a/python/notebooks/machine_learning_exploration.ipynb
+++ b/python/notebooks/machine_learning_exploration.ipynb
@@ -81,50 +81,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add new features of the combined string length\n",
-    "\n",
-    "transformed_data = np.c_[transformed_data,transformed_data[:,[9,11,13]].sum(axis=1)]\n",
-    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Split the string length feature into categories for better splitting of the training and test set\n",
-    "\n",
-    "plt.hist(transformed_data[:,15])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "strlength_cat = np.ceil(transformed_data[:,15] / 0.1)\n",
-    "strlength_cat[strlength_cat >= 2] = 2.0\n",
-    "strlength_cat = scaler.fit_transform(strlength_cat.reshape(-1, 1))\n",
-    "transformed_data = np.c_[transformed_data, strlength_cat]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "delta_cat = transformed_data[:,7]\n",
     "plt.subplot(121)\n",
@@ -150,7 +108,7 @@
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=1337)\n",
-    "for train_index, test_index in split.split(transformed_data, strlength_cat):\n",
+    "for train_index, test_index in split.split(transformed_data, targets):\n",
     "    train_index = train_index\n",
     "    test_index=test_index\n",
     "\n"
@@ -180,8 +138,8 @@
     "\n",
     "# What about string length categories\n",
     "\n",
-    "print(pd.Series(train_X[:,16]).value_counts() / train_X.shape[0])\n",
-    "print(pd.Series(test_X[:,16]).value_counts() / test_X.shape[0])"
+    "print(pd.Series(train_X[:,9]).value_counts() / train_X.shape[0])\n",
+    "print(pd.Series(test_X[:,9]).value_counts() / test_X.shape[0])"
    ]
   },
   {
@@ -504,7 +462,7 @@
    "source": [
     "from sklearn.ensemble import VotingClassifier\n",
     "voting_clf = VotingClassifier(\n",
-    "    estimators=[('log_reg', log_reg),('ada', abc), ('randomForest', rf), ('extra', etc), ('bagging', bc)],\n",
+    "    estimators=[('log_reg', log_reg),('ada', abc), ('randomForest', rf), ('bagging', bc)],\n",
     "    voting='hard')\n",
     "voting_clf.fit(train_X, train_y)\n",
     "train_pred = voting_clf.predict(train_X)\n",
@@ -536,7 +494,7 @@
     "adaboost_pred = abc.predict_proba(test_X)\n",
     "bagging_pred = bc.predict_proba(test_X)\n",
     "logreg_pred = log_reg.predict_proba(test_X)\n",
-    "xgb_pred = xgb.predict_proba(test_X)\n",
+    "#xgb_pred = xgb.predict_proba(test_X)\n",
     "\n",
     "with open('../../data/nn_out.pkl', 'rb') as f:\n",
     "    dnn_pred = pickle.load(f)\n",
@@ -544,7 +502,7 @@
     "\n",
     "blended = np.c_[\n",
     "    randomforest_pred, adaboost_pred, bagging_pred, \n",
-    "    dnn_pred, xgb_pred]\n",
+    "    dnn_pred]\n",
     "\n",
     "blended_model = LogisticRegression(random_state=1337)\n",
     "blended_model.fit(blended, test_y)\n",
@@ -567,9 +525,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "classifypipe",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "classifypipe"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -581,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
