--- a/python/notebooks/neural_network.ipynb
+++ b/python/notebooks/neural_network.ipynb
@@ -32,25 +32,12 @@
     "with open('../../data/targets.pkl','rb') as f:\n",
     "    targets = pickle.load(f)\n",
     "    f.close()\n",
-    "    \n",
-    "    \n",
-    "transformed_data = np.c_[transformed_data,transformed_data[:,[9,11,13]].sum(axis=1)]\n",
-    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]\n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "strlength_cat = np.ceil(transformed_data[:,15] / 0.1)\n",
-    "strlength_cat[strlength_cat >= 2] = 2.0\n",
-    "strlength_cat = scaler.fit_transform(strlength_cat.reshape(-1, 1))\n",
-    "transformed_data = np.c_[transformed_data, strlength_cat]"
+    "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "delta_cat = transformed_data[:,7]\n",
     "delta_cat = np.ceil(delta_cat/0.0001)\n",
@@ -91,7 +78,7 @@
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=1337)\n",
-    "for train_index, test_index in split.split(transformed_data, strlength_cat):\n",
+    "for train_index, test_index in split.split(transformed_data, targets):\n",
     "    train_index = train_index\n",
     "    test_index=test_index\n"
    ]
@@ -373,9 +360,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "classifypipe",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "classifypipe"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -387,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
