--- a/python/notebooks/keras_nn.ipynb
+++ b/python/notebooks/keras_nn.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Keras neural network \n",
+    "\n",
+    "## What do you need"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -16,7 +25,8 @@
     "from keras.callbacks import TensorBoard\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.initializers import TruncatedNormal\n",
-    "from keras.optimizers import Adam\n"
+    "from keras.optimizers import Adam\n",
+    "from datetime import datetime\n"
    ]
   },
   {
@@ -32,25 +42,12 @@
     "with open('../../data/targets.pkl','rb') as f:\n",
     "    targets = pickle.load(f)\n",
     "    f.close()\n",
-    "    \n",
-    "    \n",
-    "transformed_data = np.c_[transformed_data,transformed_data[:,[9,11,13]].sum(axis=1)]\n",
-    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]\n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "strlength_cat = np.ceil(transformed_data[:,15] / 0.1)\n",
-    "strlength_cat[strlength_cat >= 2] = 2.0\n",
-    "strlength_cat = scaler.fit_transform(strlength_cat.reshape(-1, 1))\n",
-    "transformed_data = np.c_[transformed_data, strlength_cat]"
+    "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "delta_cat = transformed_data[:,7]\n",
     "delta_cat = np.ceil(delta_cat/0.0001)\n",
@@ -93,7 +90,7 @@
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "\n",
     "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=1337)\n",
-    "for train_index, test_index in split.split(transformed_data, strlength_cat):\n",
+    "for train_index, test_index in split.split(transformed_data, targets):\n",
     "    train_index = train_index\n",
     "    test_index=test_index\n"
    ]
@@ -120,8 +117,8 @@
     "\n",
     "# What about string length categories\n",
     "\n",
-    "print(pd.Series(train_X[:,17]).value_counts() / train_X.shape[0])\n",
-    "print(pd.Series(test_X[:,17]).value_counts() / test_X.shape[0])"
+    "print(pd.Series(train_X[:,14]).value_counts() / train_X.shape[0])\n",
+    "print(pd.Series(test_X[:,18]).value_counts() / test_X.shape[0])"
    ]
   },
   {
@@ -140,9 +137,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_nodes = 150\n",
+    "n_nodes = 50\n",
     "\n",
-    "tnorm=TruncatedNormal(mean=0.0, stddev=0.05, seed=None)\n",
+    "tnorm=TruncatedNormal(mean=0.0, stddev=0.05, seed=1337)\n",
     "\n",
     "network = models.Sequential()\n",
     "network.add(\n",
@@ -170,8 +167,10 @@
     "# Write logs to tensorboard (note you need to start a server with\n",
     "# tensorboard --logdir ./tf_logs/)\n",
     "\n",
+    "logname = './tf_logs/keras' + str(datetime.now())\n",
+    "\n",
     "tb = TensorBoard(\n",
-    "    log_dir='./tf_logs', histogram_freq=0, batch_size=32, \n",
+    "    log_dir=logname, histogram_freq=0, batch_size=32, \n",
     "    write_graph=True, write_grads=False, write_images=False, \n",
     "    embeddings_freq=0, embeddings_layer_names=None, \n",
     "    embeddings_metadata=None)\n",
@@ -188,14 +187,13 @@
     "es = EarlyStopping(\n",
     "    monitor='val_loss', \n",
     "    min_delta=0.001, \n",
-    "    patience=10, verbose=1, \n",
+    "    patience=5, \n",
+    "    verbose=1, \n",
     "    mode='auto')\n",
-    "\n",
-    "# 200 epochs seems to minimise the test set error.\n",
     "\n",
     "network.fit(\n",
     "    train_X, train_y, epochs=200, \n",
-    "    batch_size=128, callbacks=[tb],\n",
+    "    batch_size=200, callbacks=[tb],\n",
     "    validation_data=(test_X, test_y))"
    ]
   },
@@ -228,15 +226,25 @@
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "print(classification_report(test_y[:,1], test_pred))"
+    "print(classification_report(test_y[:,1], test_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "savename = 'logname' + '.h5'\n",
+    "network.save(savename)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "classifypipe",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "classifypipe"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -248,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
