Add ensemble using brew

--- a/python/notebooks/machine_learning_exploration.ipynb
+++ b/python/notebooks/machine_learning_exploration.ipynb
@@ -14,6 +14,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pandas.plotting import scatter_matrix\n",
+    "#from xgboost import XGBClassifier\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.utils.validation import column_or_1d\n",
@@ -425,10 +426,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from xgboost import XGBClassifier\n",
     "\n",
@@ -467,8 +466,8 @@
     "voting_clf.fit(train_X, train_y)\n",
     "train_pred = voting_clf.predict(train_X)\n",
     "\n",
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)\n",
+    "#class_report = classification_report(train_y, train_pred)\n",
+    "#print(class_report)\n",
     "\n",
     "test_pred = voting_clf.predict(test_X)\n",
     "class_report = classification_report(test_y, test_pred)\n",
@@ -490,6 +489,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "\n",
     "randomforest_pred = rf.predict_proba(test_X)\n",
     "adaboost_pred = abc.predict_proba(test_X)\n",
     "bagging_pred = bc.predict_proba(test_X)\n",
@@ -500,9 +501,12 @@
     "    dnn_pred = pickle.load(f)\n",
     "    f.close()\n",
     "\n",
-    "blended = np.c_[\n",
-    "    randomforest_pred, adaboost_pred, bagging_pred, \n",
-    "    dnn_pred]\n",
+    "blended = pd.DataFrame(np.c_[\n",
+    "    randomforest_pred, adaboost_pred, bagging_pred, dnn_pred\n",
+    "])\n",
+    "\n",
+    "polynomials = PolynomialFeatures(2)\n",
+    "blended = polynomials.fit_transform(blended)\n",
     "\n",
     "blended_model = LogisticRegression(random_state=1337)\n",
     "blended_model.fit(blended, test_y)\n",
@@ -521,13 +525,133 @@
     "print(round(scores.std(),3))\n",
     "#72"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stacking with brew"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from brew.base import Ensemble, EnsembleClassifier\n",
+    "from brew.stacking.stacker import EnsembleStack, EnsembleStackClassifier\n",
+    "from brew.combination.combiner import Combiner\n",
+    "from sklearn import clone\n",
+    "\n",
+    "clf1 = LogisticRegression(random_state=1337)\n",
+    "clf2 = RandomForestClassifier(random_state=1337)\n",
+    "clf3 = SVC(random_state=1337, probability=True)\n",
+    "clf4 = AdaBoostClassifier(random_state=1337)\n",
+    "clf5 = BaggingClassifier(random_state=1337)\n",
+    "\n",
+    "ensemble = Ensemble([clf1, clf2, clf3])\n",
+    "eclf = EnsembleClassifier(ensemble=ensemble, combiner=Combiner('mean'))\n",
+    "\n",
+    "eclf.fit(train_X, train_y)\n",
+    "eclf_pred = eclf.predict(test_X)\n",
+    "\n",
+    "class_report = classification_report(test_y, eclf_pred)\n",
+    "print(class_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating Stacking\n",
+    "layer_1 = Ensemble([clf1, clf2, clf3, clf4, clf5])\n",
+    "layer_2 = Ensemble([clone(clf1)])\n",
+    "\n",
+    "stack = EnsembleStack(cv=10)\n",
+    "\n",
+    "stack.add_layer(layer_1)\n",
+    "stack.add_layer(layer_2)\n",
+    "\n",
+    "sclf = EnsembleStackClassifier(stack)\n",
+    "\n",
+    "sclf.fit(train_X, train_y)\n",
+    "\n",
+    "sclf_pred_train = sclf.predict(train_X)\n",
+    "sclf_pred_test = sclf.predict(test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_report = classification_report(train_y, sclf_pred_train)\n",
+    "print(class_report)\n",
+    "class_report = classification_report(test_y, sclf_pred_test)\n",
+    "print(class_report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine training data with output of the first stack\n",
+    "\n",
+    "new_train_X = np.c_[train_X, sclf_pred_train]\n",
+    "\n",
+    "layer_1 = Ensemble([clf1, clf2, clf3, clf4, clf5])\n",
+    "#layer_2 = Ensemble([clone(clf1)])\n",
+    "\n",
+    "stack2 = EnsembleStack(cv=3)\n",
+    "\n",
+    "stack2.add_layer(layer_1)\n",
+    "#stack2.add_layer(layer_2)\n",
+    "\n",
+    "sclf2 = EnsembleClassifier(stack2)\n",
+    "\n",
+    "sclf2.fit(new_train_X, train_y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_test_X = np.c_[test_X, sclf_pred_test]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sclf2_pred = sclf2.predict(new_test_X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_report = classification_report(test_y, sclf2_pred)\n",
+    "print(class_report)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "classifypipe",
    "language": "python",
-   "name": "python3"
+   "name": "classifypipe"
   },
   "language_info": {
    "codemirror_mode": {
