Change notebook kernels

--- a/python/notebooks/keras_nn.ipynb
+++ b/python/notebooks/keras_nn.ipynb
@@ -26,6 +26,7 @@
     "from keras.callbacks import EarlyStopping\n",
     "from keras.initializers import TruncatedNormal\n",
     "from keras.optimizers import Adam\n",
+    "from keras.layers import Dropout\n",
     "from datetime import datetime\n"
    ]
   },
@@ -145,15 +146,16 @@
     "network.add(\n",
     "    layers.Dense(n_nodes, activation='elu', \n",
     "                 input_shape=(n,), kernel_initializer=tnorm))\n",
+    "network.add(Dropout(0.5))\n",
     "network.add(layers.Dense(n_nodes, activation='elu', input_shape=(n,)))\n",
+    "network.add(Dropout(0.5))\n",
     "network.add(layers.Dense(n_nodes, activation='elu', input_shape=(n,)))\n",
+    "network.add(Dropout(0.5))\n",
     "network.add(layers.Dense(2, activation='softmax'))\n",
-    "\n",
     "\n",
     "am = Adam(\n",
     "    lr=0.001, beta_1=0.9, beta_2=0.999, \n",
     "    epsilon=1e-08, decay=0.0)\n",
-    "\n",
     "\n",
     "network.compile(optimizer=am,\n",
     "                loss='categorical_crossentropy',\n",
@@ -192,7 +194,7 @@
     "    mode='auto')\n",
     "\n",
     "network.fit(\n",
-    "    train_X, train_y, epochs=200, \n",
+    "    train_X, train_y, epochs=50, \n",
     "    batch_size=200, callbacks=[tb],\n",
     "    validation_data=(test_X, test_y))"
    ]
@@ -235,16 +237,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "savename = 'logname' + '.h5'\n",
+    "savename = logname + '.h5'\n",
     "network.save(savename)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "classifypipe",
    "language": "python",
-   "name": "python3"
+   "name": "classifypipe"
   },
   "language_info": {
    "codemirror_mode": {
