--- a/python/notebooks/neural_network.ipynb
+++ b/python/notebooks/neural_network.ipynb
@@ -360,9 +360,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "classifypipe",
    "language": "python",
-   "name": "python3"
+   "name": "classifypipe"
   },
   "language_info": {
    "codemirror_mode": {
