--- a/python/notebooks/adaboost_optimisation.ipynb
+++ b/python/notebooks/adaboost_optimisation.ipynb
@@ -185,9 +185,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_y_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.metrics import precision_recall_curve\n",
     "\n",
-    "precisions, recalls, thresholds = precision_recall_curve(train_y, train_y_scores[:,1])"
+    "precisions, recalls, thresholds = precision_recall_curve(train_y, train_y_scores)"
    ]
   },
   {
@@ -222,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_y_pred_90 = (train_y_scores[:,1] > 0.06)"
+    "train_y_pred_90 = (train_y_scores > 0.06)"
    ]
   },
   {
@@ -267,7 +276,7 @@
    "outputs": [],
    "source": [
     "test_y_scores = cross_val_predict(abc, test_X, test_y, cv=3, method=\"decision_function\")\n",
-    "test_y_pred_90 = (test_y_scores[:,1] > 0.06)\n",
+    "test_y_pred_90 = (test_y_scores > 0.06)\n",
     "\n",
     "print('precision:', round(precision_score(test_y, test_y_pred_90), 3))\n",
     "print('recall:', round(recall_score(test_y, test_y_pred_90), 3))"
@@ -397,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
